foundation-objs/main/default/objects/CSM_Escalation__mdt/CSM_Escalation__mdt.object-meta.xml
<CustomObject>
    <label>CSM Escalation</label>
    <pluralLabel>CSM Escalations</pluralLabel>
</CustomObject>