foundation-objs/main/default/objects/CSM_Escalation__mdt/fields/HTML_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Email_Body__c</fullName>
    <label>HTML Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>