foundation-objs/main/default/objects/CSM_Escalation__mdt/fields/To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>To_Addresses__c</fullName>
    <label>To Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>